force-app/main/default/objects/EventParticipant__c/EventParticipant__c.object-meta.xml
<CustomObject>
    <description>Event Participant</description>
    <label>EventParticipant</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventParticipants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>