force-app/main/default/objects/EventParticipant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EventParticipants</relationshipLabel>
    <relationshipName>EventParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>