force-app/main/default/objects/EventParticipant__c/fields/multipicklist__c.field-meta.xml
<CustomField>
    <fullName>multipicklist__c</fullName>
    <label>multipicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attendee Contact</fullName>
            </value>
            <value>
                <fullName>Presenter Contact</fullName>
            </value>
            <value>
                <fullName>Organizer Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>